--- a/src/assets/Components/Footer/Footer.css
+++ b/src/assets/Components/Footer/Footer.css
@@ -6,6 +6,7 @@
 footer {
   background: var(--preto-profundo);
   text-align: center;
+  background-image: linear-gradient(60deg, #1f243D, #052c00 40%);
   padding: 20px;
   margin-top: 20px;
 }
