--- a/src/assets/Components/Header/Header.css
+++ b/src/assets/Components/Header/Header.css
@@ -41,7 +41,7 @@ header {
     width: 100%;
     height: 110px;
     transform: translateY(-100%);
-    background-color:#000000;
+    background-image: linear-gradient(60deg, #1f243D, #052c00 50%);
     z-index: 900;
     transition:
         background-color 0.4s ease-out,
@@ -55,8 +55,7 @@ header {
 
 .navbar-fundo.scrolled {
     transform: translateY(0);
-    background-color: #000000;
-    box-shadow: #000000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .navbar-fundo.hide-on-scroll {
@@ -110,7 +109,7 @@ header {
 /* ========================================= */
 
 .circle-icon {
-    background: white;
+    background: #0E7000;
     color: black;
     width: 32px;
     height: 32px;
@@ -126,7 +125,7 @@ header {
     margin-left: 15px;
     background-color: transparent;
     color: white;
-    border: 2px solid white;
+    border: 2px solid #97d225;
     border-radius: 5px;
     font-weight: 600;
     text-decoration: none;
@@ -134,6 +133,6 @@ header {
 }
 
 .ctt-button:hover {
-    background-color: white;
+    background-color: #97d225;
     color: #1a1a1a;
 }
