--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -118,7 +118,7 @@ section {
 }
 
 #industrias {
-  background: var(--preto-suave);
+  background-image: linear-gradient(60deg, #1f243D, #052c00 50%);
   padding: 50px 0;
   text-align: left;
 }
